@@ -99,6 +99,15 @@ name=moveto
 	gold=2000
 	enemy=2
 	shroud=yes
+		[unit]
+			x,y=4,8
+			type="Elvish Avenger"
+			generate_description=yes
+			hitpoints=4
+			[status]
+			stone=on
+			[/status]
+		[/unit]
 	[/side]
 
 	[side]
