@@ -137,6 +137,7 @@ SVN trunk:
    * Added brief description of the Shroud and the Fog of War.
  * Changed recall to allow you to see your recall list even if you have too
    little gold to recall any units.
+ * prevented stoned units from being healed
  * various bug fixes and code cleanups
 
 Version 1.0rc1:
